# shade-python-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.fleet/: run.json
OLD_tests/: test_indexing.py  test_roots.py  test_search.py
examples/: example_script.py  get_drive_and_search.py  hello_world_remote.py  use_new_routes.py
shade/: __init__.py  enums.py  query_builder.py  shade_instance.py  types.py  utils.py
shade/resources/: abc_resource.py  asset.py  billing.py  drive.py  file.py  share.py  workspace.py
shade/v1/: api.py  models.py  shade_instance.py  types.py
shade/v1/routes/: assets.py  collections.py  config.py  convert.py  indexing.py  models.py  previews.py  roots.py  search.py  server.py
shade/v2/: __init__.py  query_builder.py  utils.py
shade/v2/resources/: abc_resource.py  asset.py  billing.py  drive.py  file.py  share.py  workspace.py
tests/: __main__.py  conftest.py  helpers.py  main.py  test_assets.py  test_drives.py  test_indexing.py  test_ocio.py  test_roots.py  test_search.py  test_workspace.py
tests/server/: test_indexing.py
